# Capstone-Game

./: CMakeLists.txt  README.md
res/: meteor
src/: game.cpp  game.h  main.cpp  mixer.cpp  mixer.h  renderer.cpp  renderer.h  snake.h  spritestexture.cpp  spritestexture.h  texture.cpp  texture.h
